--- a/css/styles.css
+++ b/css/styles.css
@@ -738,13 +738,13 @@ button {
   gap: 48px 24px;
 }
 
-.our-portfolio {
+.portfolio-list {
   flex-direction: column;
   display: flex;
   row-gap: 48px;
 }
 @media screen and (min-width: 768px) {
-  .our-portfolio {
+  .portfolio-list {
     flex-wrap: wrap;
     flex-direction: row;
     gap: 48px 24px;
