--- a/css/styles.css
+++ b/css/styles.css
@@ -136,16 +136,27 @@ img {
   opacity: 1;
   visibility: visible;
 }
+
+
 .mobile-menu-close-btn {
   position: absolute;
   top: 24px;
   right: 24px;
   padding: 0;
-  border: none;
   background-color: transparent;
   fill: #2e2f42;
   line-height: 0;
+  width: 24px;
+  height: 24px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+
+
 .mobile-menu-container {
   display: flex;
   flex-direction: column;
@@ -875,7 +886,7 @@ button {
   margin-bottom: 8px;
 }
 @media screen and (max-width: 1157px) {
-  .benefits-list-icon{
+  .benefits-list-icon {
     display: none;
   }
 }
@@ -927,6 +938,7 @@ button {
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .modal {
   position: absolute;
   display: flex;
@@ -946,6 +958,7 @@ button {
     0 2px 1px 0 rgba(0, 0, 0, 0.2);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 @media screen and (min-width: 768px) {
   .modal {
     width: 408px;
@@ -957,6 +970,7 @@ button {
   height: 8px;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .modal-close-btn {
   display: flex;
   justify-content: center;
@@ -976,6 +990,8 @@ button {
   width: 24px;
   height: 24px;
 }
+
+
 
 .modal-close-btn:hover,
 .modal-close-btn:focus {
@@ -997,7 +1013,7 @@ button {
   pointer-events: auto;
 }
 
-.review-form-description {
+.modal-title {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -1008,7 +1024,7 @@ button {
   color: #2e2f42;
 }
 
-.review-form-input {
+.input-form {
   width: 100%;
   height: 40px;
   padding-left: 38px;
@@ -1019,7 +1035,7 @@ button {
   outline: transparent;
 }
 
-.review-form-filed-label {
+.lable-form {
   display: block;
   font-size: 12px;
   letter-spacing: 0.04em;
@@ -1028,18 +1044,18 @@ button {
   line-height: 1.17;
 }
 
-.review-form-field-wrapper {
+.modal-input {
   margin-bottom: 8px;
 }
 
-.review-form-field-wrapper:nth-child(4) {
+.modal-input:nth-child(4) {
   margin-bottom: 16px;
 }
-.review-form-input-wrapper {
+.modal-input-container {
   position: relative;
 }
 
-.review-form-field-icon {
+.modal-icon {
   position: absolute;
   top: 50%;
   left: 16px;
@@ -1048,16 +1064,16 @@ button {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.review-form-input:focus {
+.input-form:focus {
   border-color: #4d5ae5;
   outline: transparent;
 }
 
-.review-form-input:focus + .review-form-field-icon {
+.input-form:focus + .modal-icon {
   fill: #4d5ae5;
 }
 
-.review-form-message {
+.input-form-comment {
   font-size: 12px;
   letter-spacing: 0.04em;
   width: 100%;
@@ -1072,33 +1088,33 @@ button {
   outline: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.review-form-message::placeholder {
+.input-form comment::placeholder {
   color: rgba(46, 47, 66, 0.4);
 }
 
-.review-form-message:focus {
+.input-form comment:focus {
   outline: transparent;
   border-color: #4d5ae5;
 }
 
-.review-form-checkbox-label {
+.modal-privacy-agree{
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
   color: #8e8f99;
 }
 
-.privacy-policy-link {
+.modal-privacy-link {
   line-height: 1.33333;
   text-decoration: underline;
   text-decoration-skip-ink: none;
   color: #4d5ae5;
 }
 
-.review-form-checkbox-wrapper {
+.input-checkbox {
   margin-bottom: 24px;
 }
-.review-form-own-checkbox {
+.modal-custom-checkbox{
   display: inline-flex;
   justify-content: center;
   align-items: center;
@@ -1113,23 +1129,23 @@ button {
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.review-form-privacy-checkbox:checked
-  + .review-form-checkbox-label
-  .review-form-own-checkbox {
+.modal-privacy-checkbox:checked
+  + .modal-privacy-agree
+  .modal-custom-checkbox {
   background-color: #404bbf;
   fill: #f4f4fd;
   border: none;
   border-color: #404bbf;
 }
 
-.review-form-privacy-checkbox:checked {
+.modal-privacy-checkbox:checked {
   background-color: #404bbf;
   fill: #f4f4fd;
   border: none;
   border-color: #404bbf;
 }
 
-.review-form-submit-button {
+.modal-btn {
   border-radius: 4px;
   padding: 16px 32px;
   width: 169px;
@@ -1149,8 +1165,8 @@ button {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.review-form-submit-button:hover,
-.review-form-submit-button:focus {
+.mobile-menu-close-btn:hover,
+.mobile-menu-close-btn:focus {
   background-color: #404bbf;
 }
 
