--- a/css/styles.css
+++ b/css/styles.css
@@ -39,6 +39,12 @@ img {
   padding: 96px 0 96px 0;
 }
 
+@media screen and (min-width: 1158px) {
+  .section {
+    padding: 120px 0;
+  }
+}
+
 .logo {
   color: #4d5ae5;
   font-family: 'Raleway', sans-serif;
