--- a/css/styles.css
+++ b/css/styles.css
@@ -1090,11 +1090,11 @@ button {
   outline: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.input-form comment::placeholder {
+.input-form-comment::placeholder {
   color: rgba(46, 47, 66, 0.4);
 }
 
-.input-form comment:focus {
+.input-form-comment:focus {
   outline: transparent;
   border-color: #4d5ae5;
 }
