--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,6 @@ img {
   height: auto;
 }
 
-
 .section {
   padding: 96px 0 96px 0;
 }
@@ -144,7 +143,6 @@ img {
   opacity: 1;
   visibility: visible;
 }
-
 
 .mobile-menu-close-btn {
   position: absolute;
@@ -329,7 +327,7 @@ button {
   justify-content: space-between;
   align-items: center;
 }
- 
+
 .page-header {
   background-color: #ffffff;
   font-style: normal;
@@ -994,8 +992,6 @@ button {
   height: 24px;
 }
 
-
-
 .modal-close-btn:hover,
 .modal-close-btn:focus {
   background-color: #404bbf;
@@ -1100,7 +1096,7 @@ button {
   border-color: #4d5ae5;
 }
 
-.modal-privacy-agree{
+.modal-privacy-agree {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
@@ -1117,7 +1113,7 @@ button {
 .input-checkbox {
   margin-bottom: 24px;
 }
-.modal-custom-checkbox{
+.modal-custom-checkbox {
   display: inline-flex;
   justify-content: center;
   align-items: center;
@@ -1132,9 +1128,7 @@ button {
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-privacy-checkbox:checked
-  + .modal-privacy-agree
-  .modal-custom-checkbox {
+.modal-privacy-checkbox:checked + .modal-privacy-agree .modal-custom-checkbox {
   background-color: #404bbf;
   fill: #f4f4fd;
   border: none;
@@ -1219,26 +1213,40 @@ button {
 .input-subscribe {
   border: 1px solid #fff;
   border-radius: 4px;
-  width: 264px;
+  width: 288px;
   height: 40px;
   background-color: transparent;
-  padding-left: 16px;
-  padding-bottom: 8px;
-  padding-top: 8px;
+  padding: 8px 16px;
   font-size: 12px;
   line-height: 2;
   letter-spacing: 0.04em;
   color: #fff;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  opacity: 0.3;
 }
 .input-subscribe::placeholder {
   font-size: 12px;
   line-height: 2;
   letter-spacing: 0.04em;
   color: #fff;
-  padding-left: 16px;
-  padding-bottom: 8px;
-  padding-top: 8px;
+  opacity: 0.6;
+}
+
+@media screen and (min-width: 1158px) {
+  .input-subscribe {
+    opacity: 1;
+    width: 264px;
+  }
+  .input-subscribe::placeholder {
+    opacity: 1;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .input-subscribe {
+    opacity: 1;
+    width: 264px;
+  }
 }
 
 .input-subscribe:focus {
@@ -1248,17 +1256,13 @@ button {
 .footer-subscribe-form {
   display: flex;
   flex-direction: column;
-  gap: 24px;
+  gap: 16px;
 }
 @media screen and (min-width: 768px) {
   .footer-subscribe-form {
     flex-direction: row;
+    gap: 24px;
   }
-}
-
-.subscribe-form-label {
-  display: flex;
-  flex-direction: column;
 }
 
 @media screen and (min-width: 1158px) {
