--- a/css/styles.css
+++ b/css/styles.css
@@ -280,6 +280,14 @@ img {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 }
+
+@media screen and (min-width: 768px) {
+  .address-link {
+    font-size: 12px;
+    line-height: 1.16;
+  }
+}
+
 @media screen and (min-width: 1158px) {
   .logo {
     margin-right: 76px;
@@ -293,6 +301,8 @@ img {
     line-height: 1.5;
   }
 }
+
+
 
 button {
   cursor: pointer;
@@ -1232,6 +1242,13 @@ button {
   opacity: 0.6;
 }
 
+
+@media screen and (min-width: 768px) {
+  .input-subscribe {
+    width: 264px;
+  }
+}
+
 @media screen and (min-width: 1158px) {
   .input-subscribe {
     opacity: 1;
@@ -1239,12 +1256,6 @@ button {
   }
   .input-subscribe::placeholder {
     opacity: 1;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .input-subscribe {
-    width: 264px;
   }
 }
 
